--- a/notebooks/vector_search.ipynb
+++ b/notebooks/vector_search.ipynb
@@ -2,65 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e661a41d-a192-4ed7-8e2f-8f41bdac6f3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install langchain langchain-core langchain-community chromadb langchain-openai --quiet"
+    "!pip install langchain langchain-core langchain-community chromadb langchain-openai pypdf langchain_chroma chromadb --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fcbacb9-fcc3-42db-86b2-4a3ad2ce9464",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pypdf\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5e5d557f-77f9-4760-bfea-53a73115623d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pypdf import PdfReader\n",
     "\n",
-    "reader = PdfReader(\"Área de trabalho/projeto_dieta/Dieta_atual.pdf\")\n",
-    "dieta = \"\"\n",
-    "caloria = \"\"\n",
+    "reader = PdfReader(\"../resources/books/book1.pdf\")\n",
+    "book1 = \"\"\n",
+    "book2 = \"\"\n",
     "\n",
     "for page in reader.pages:\n",
-    "    dieta += page.extract_text() \n",
+    "    book1 += page.extract_text() \n",
     "\n",
-    "reader = PdfReader(\"Área de trabalho/projeto_dieta/taco_4_edicao_ampliada_e_revisada.pdf\")\n",
+    "reader = PdfReader(\"../resources/books/book2.pdf\")\n",
     "\n",
     "for page in reader.pages:\n",
-    "    caloria += page.extract_text() \n",
+    "    book2 += page.extract_text() \n",
     "    \n",
     "import re\n",
-    "dieta = re.sub(r\"\\s{2,}\", \" \", dieta)\n",
-    "caloria = re.sub(r\"\\s{2,}\", \" \", caloria)"
+    "book1 = re.sub(r\"\\s{2,}\", \" \", book1)\n",
+    "book2 = re.sub(r\"\\s{2,}\", \" \", book2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "020f962a-63dd-4ee9-832f-177b63766531",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.documents import Document\n",
-    "document_dieta = [Document(page_content = dieta, metadata = {\"autor\": \"Nutri do danilo\"})]\n",
-    "document_caloria = [Document(page_content = caloria, metadata = {\"autor\": \"Unicamp\"})]"
+    "document_book1   = [Document(page_content = book1,   metadata = {\"key\": \"value1\"})]\n",
+    "document_book2   = [Document(page_content = book2,   metadata = {\"key\": \"value2\"})]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "54a4bd2f-2eda-43fe-8a0e-ec3e8e6e8876",
    "metadata": {},
    "outputs": [],
@@ -71,59 +61,155 @@
     "    chunk_overlap  = 200,\n",
     "    length_function = len,\n",
     ")\n",
-    "chunks_dieta = text_splitter.split_documents(document_dieta)\n",
-    "\n",
     "text_splitter_bigger_docs = RecursiveCharacterTextSplitter(\n",
     "    chunk_size = 1000,\n",
     "    chunk_overlap  = 500,\n",
     "    length_function = len,\n",
     ")\n",
-    "chunks_calorias = text_splitter_bigger_docs.split_documents(document_caloria)"
+    "chunks_book1 = text_splitter.split_documents(document_book1)\n",
+    "chunks_book2 = text_splitter_bigger_docs.split_documents(document_book2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "44ea2415-e20b-4c8f-9d2e-d5f79ea27cbf",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.vectorstores.chroma import Chroma\n",
     "from langchain_openai.embeddings import OpenAIEmbeddings\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "\n",
-    "OPENAI_API_KEY = \"\"\n",
+    "load_dotenv(override=True)\n",
     "\n",
-    "db = Chroma.from_documents(\n",
-    "    documents = chunks_dieta + chunks_calorias,\n",
-    "    embedding = OpenAIEmbeddings(openai_api_key = OPENAI_API_KEY),\n",
-    "    persist_directory = \"db_lite\",\n",
-    ")\n"
+    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd40dc9d-db81-4fd3-90f6-810a33fe1676",
+   "execution_count": 15,
+   "id": "fdc52897-c095-4216-a530-9f38ef7e4995",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1768962798233402313\n"
+     ]
+    }
+   ],
    "source": [
-    "query = \"o que tomar no café da manha\"\n",
+    "import chromadb\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
-    "docs = db.similarity_search_with_relevance_scores(query, k=5, filter={\"autor\":\"Unicamp\"})\n",
+    "# Connect to the container\n",
+    "client = chromadb.HttpClient(host='chroma', port=8000, settings=chromadb.Settings(allow_reset=True, anonymized_telemetry=False))\n",
     "\n",
-    "for i, d in enumerate(docs, 1):\n",
-    "    print(f\"\\n--- Resultado {i} ---\")\n",
-    "    print(\"Metadata:\", d.metadata)\n",
-    "    print(\"Texto:\", d.page_content[:400])\n"
+    "print(client.heartbeat())\n",
+    "# Connect to the SPECIFIC existing collection\n",
+    "db = Chroma(\n",
+    "    client=client,\n",
+    "    collection_name=\"kb1\",\n",
+    "    embedding_function=OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1042508-4c99-40a7-99f8-05d4a74f7c80",
+   "id": "51ea57e1-02b9-47d5-aeea-34bd0ef02e54",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a00bf0bb-97f2-486f-9bbd-f1d6a5cd6291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.get(where={\"key\":\"value2\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dd40dc9d-db81-4fd3-90f6-810a33fe1676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Resultado 1 ---\n",
+      "Metadata: {'key': 'value1'}\n",
+      "Texto: da minha vida: um ovo, uma fatia de pão, uma xícara de chá. Não me esqueceu esta circunstância mí nima; no meio de tanta coisa importante obliterada escapou esse almoço. A razão principal poderia ser justamente o meu desastre; ma s não foi; a principal razão foi a reflexão que me fez o Quincas Borba, cuja visita recebi naquele dia. Disse-me ele que a frugalidade não era necessária para entender o \n",
+      "\n",
+      "--- Resultado 2 ---\n",
+      "Metadata: {'key': 'value1'}\n",
+      "Texto: isso dava uma combinação assaz complexa e vaga, uma coisa que não podereis entender, como eu não entendi. Suponhamos que não disse nada. CAPÍTULO CIX / O FILÓSOFO Sabido que reli a carta, antes e de pois do almoço, sabido fica que almocei, e só resta dizer que essa refeição foi das mais parcas da minha vida: um ovo, uma fatia de pão, uma xícara de chá. Não me esqueceu esta circunstância mí nima; n\n",
+      "\n",
+      "--- Resultado 3 ---\n",
+      "Metadata: {'key': 'value1'}\n",
+      "Texto: ni-ti-va! repetiu, batendo as sílabas com o dedo. Bebeu o último gole de café; repolt reou-se, e entrou a falar de tudo, do Senado, da Câmara, da Regência, da restauração, do Evaristo, de um coche que pretendia comprar, da nossa casa de Mata-cavalos... Eu deixava-me estar ao canto da mesa, a escrever desvairadamente num pedaço de papel, com uma ponta de lápis; traçava uma palavra, uma frase, um ve\n",
+      "\n",
+      "--- Resultado 4 ---\n",
+      "Metadata: {'key': 'value1'}\n",
+      "Texto: ava em comer. No intervalo das glosas, corria um burburinho alegre, um palavrear de estômagos satisfeitos; os olhos moles e úmidos, ou vivos e cálidos, espreguiçavam-se ou saltitavam de uma ponta à outra da mesa, atulhada de doces e frutas, aqui o ananás em fatias, ali o melão em talhadas, as compoteiras de cristal deixando ver o doce de coco, finamente ralado, amarelo como uma gema, — ou então o \n",
+      "\n",
+      "--- Resultado 5 ---\n",
+      "Metadata: {'key': 'value1'}\n",
+      "Texto: os nervos e o sangue, e a boa regra perdia o espírito, que a faz viver, para se tornar uma vã fórmula. De manhã, antes do mingau, e de noite, ante s da cama, pedia a Deus que me perdoasse, assim como eu perdoava aos meus devedores; mas entre a manhã e a noite fazia uma grande maldade, e meu pai, passado o alvoroço, dava-me pancadinhas na cara, e exclamava a rir: Ah! brejeiro! ah! brejeiro! Sim, me\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"o que tomar no café da manha\"\n",
+    "\n",
+    "docs = db.similarity_search_with_relevance_scores(query, k=5, filter={\"key\":\"value1\"})\n",
+    "\n",
+    "for i, d in enumerate(docs, 1):\n",
+    "    print(f\"\\n--- Resultado {i} ---\")\n",
+    "    print(\"Metadata:\", d[0].metadata)\n",
+    "    print(\"Texto:\", d[0].page_content[:400])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e7c68a39-24f5-4037-80f2-f873103c8504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = docs.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a1042508-4c99-40a7-99f8-05d4a74f7c80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6930454927460987"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1[1]\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -158,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
